--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@ body {
   padding: 0;
   font-family: "Merriweather", serif;
 }
+
+::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
